SERVER-56045 Fix [SBE][dbtest] QueryStageMultiPlanTest test failing due to unexpected PlanExecutor implementation